--- a/src/cv.bib
+++ b/src/cv.bib
@@ -1,100 +1,77 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: ISO8859_1
 
-@STRING{huma = "Int. Conf. on Humanoid Robotics (Humanoids)"}
+@STRING{huma = "Int. {C}onf. on {H}umanoid {R}obotics"}
 
-@STRING{icra = "Int. Conf. on Robotics and Automation (ICRA)"}
+@STRING{icra = "Int. {C}onf. on {R}obotics and {A}utomation"}
 
-@STRING{ichr = "Int. Conf. on Humanoid Robotics (ICHR)"}
+@STRING{ichr = "Int. {C}onf. on {H}umanoid {R}obotics"}
 
-@STRING{iros = "Int. Conf. on Intelligent Robots and Systems (IROS)"}
+@STRING{iros = "Int. {C}onf. on {I}ntelligent {R}obots and {S}ystems"}
 
-@STRING{ijrr = "Int. Jour. of Robotics Research"}
+@STRING{ijrr = "Int. {J}our. of {R}obotics {R}esearch"}
 
-@STRING{ral = "Int. Jour. of Robotics and Automation Letter"}
+@STRING{ral = "Int. {J}our. of {R}obotics and {A}utomation {L}etter"}
 
-@ARTICLE { naveau:hal-01261415,
+@STRING{biorob = "Int. {C}onf. on {B}iomedical {R}obotics and {B}iomechatronics"}
+
+@ARTICLE { naveau_ral_2016,
     TITLE = { {A Reactive Walking Pattern Generator Based on Nonlinear Model Predictive Control} },
     AUTHOR = { Naveau, Maximilien and Kudruss, Manuel and Stasse, Olivier and Kirches, Christian and Mombaur, Katja and Sou{\`e}res, Philippe },
-    URL = { https://hal.archives-ouvertes.fr/hal-01261415 },
     JOURNAL = ral,
-    HAL_LOCAL_REFERENCE = { Rapport LAAS n{\textdegree} 16004 },
     PUBLISHER = { {IEEE } },
     NUMBER = { 99 },
-    YEAR = { 2016 },
-    DOI = { 10.1109/LRA.2016.2518739 },
-    KEYWORDS = { Humanoid and Bipedal Locomotion ; Humanoid Robots ; Nonlinear Model Predictive Control },
-    PDF = { https://hal.archives-ouvertes.fr/hal-01261415/file/16-ra-letter-NMPCWalkGen.pdf },
-    HAL_ID = { hal-01261415 },
-    HAL_VERSION = { v1 }
+    YEAR = { 2016 }
 }
 
 
-@INPROCEEDINGS { orthey_2015_iros,
-    AUTHOR = { Andreas Orthey and Vladimir Ivan and Maximilien Naveau and Yiming Yang and Olivier Stasse and Sethu Vijayakumar },
-    TITLE = { Homotopic Particle Motion Planning },
-    BOOKTITLE = ichr,
-    ADDRESS = { Seoul, Korea },
-    YEAR = { 2015 (under review) },
-    PDF = { http://homepages.laas.fr/aorthey/papers/orthey_2015b.pdf }
-}
-
-@INPROCEEDINGS { naveau:hal-01122475,
+@CONFERENCE { naveau_ichr_2014,
     TITLE = { {METAPOD Template META-programming applied to dynamics: CoP-CoM trajectories filtering} },
     AUTHOR = { Naveau, Maximilien and Carpentier, Justin and Barthelemy, S{\'e}bastien and Stasse, Olivier and Sou{\`e}res, Philippe },
-    URL = { https://hal.archives-ouvertes.fr/hal-01122475 },
     BOOKTITLE = ichr,
     ADDRESS = { Madrid, Spain },
-    HAL_LOCAL_REFERENCE = { Rapport LAAS n{\textdegree}14688 },
-    YEAR = { 2014 },
-    MONTH = { November },
-    DOI = { 10.1109/HUMANOIDS.2014.7041391 },
-    PDF = { https://hal.archives-ouvertes.fr/hal-01122475/file/14-ichr-metapod.pdf },
-    HAL_ID = { hal-01122475 },
-    HAL_VERSION = { v1 }
+    YEAR = { 2014 }
 }
 
-@INPROCEEDINGS { stasse:hal-01122476,
+@CONFERENCE { stasse_ichr_2014,
     TITLE = { {Airbus/future of aircraft factory HRP-2 as universal worker proof of concept} },
     AUTHOR = { Stasse, Olivier and Orthey, Andreas and Morsillo, Francesco and Geisert, Mathieu and Mansard, Nicolas and Naveau, Maximilien and Vassallo, Christian },
-    URL = { https://hal.archives-ouvertes.fr/hal-01122476 },
     BOOKTITLE = ichr,
     ADDRESS = { Madrid, Spain },
-    HAL_LOCAL_REFERENCE = { Rapport LAAS n{\textdegree} 14689 },
     YEAR = { 2014 },
-    MONTH = { November },
-    DOI = { 10.1109/HUMANOIDS.2014.7041488 },
-    PDF = { https://hal.archives-ouvertes.fr/hal-01122476/file/14-ichr-airbus.pdf },
-    KEYWORDS = { Motion planning, visual servoing, Walking pattern generator, Whole body control },
-    URL = { https://www.youtube.com/watch?v=iFV-13XlJvI },
-    HAL_ID = { hal-01122476 },
-    HAL_VERSION = { v1 }
+    KEYWORDS = { Motion planning, visual servoing, Walking pattern generator, Whole body control }
 }
 
-@MISC { carpentier:hal-01203507,
-    TITLE = { {A Versatile and Efficient Pattern Generator for Generalized Legged Locomotion} },
-    AUTHOR = { Carpentier, Justin and Tonneau, Steve and Naveau, Maximilien and Stasse, Olivier and Mansard, Nicolas },
-    URL = { https://hal.archives-ouvertes.fr/hal-01203507 },
-    NOTE = { This paper has been submitted to the IEEE International Conference on Robotics and Automation (ICRA) 2016. },
-    HAL_LOCAL_REFERENCE = { Rapport LAAS n{\textdegree} 15342 },
-    YEAR = { 2015 },
-    MONTH = { September },
-    KEYWORDS = { Humanoid Robot ; Legged locomotion ; Motion Planning ; Optimal Control ; Whole Body Locomotion },
-    PDF = { https://hal.archives-ouvertes.fr/hal-01203507/file/root.pdf },
-    HAL_ID = { hal-01203507 },
-    HAL_VERSION = { v1 }
+
+@CONFERENCE{ carpentier_icra_2016,
+  AUTHOR = {J. Carpentier and S. Tonneau and M. Naveau and O. Stasse and N. Mansard},
+  TITLE = {A versatile and efficient pattern generator for generalized legged
+	locomotion},
+  BOOKTITLE = icra,
+  ADRESSE = { Stockholm, Sweden },
+  YEAR = { 2016 }
 }
 
-@MISC { orthey:hal-01137918,
-    TITLE = { {Homotopic particle motion planning for humanoid robotics} },
-    AUTHOR = { Orthey, Andreas and Ivan, Vladimir and Naveau, Maximilien and Yang, Yiming and Stasse, Olivier and Vijayakumar, Sethu },
-    URL = { https://hal.archives-ouvertes.fr/hal-01137918 },
-    NOTE = { working paper or preprint },
-    HAL_LOCAL_REFERENCE = { Rapport LAAS n{\textdegree} 15107 },
-    YEAR = { 2015 },
-    MONTH = { March },
-    KEYWORDS = { Motion planning ; Robotics ; Convex Optimization ; Applied Topology },
-    PDF = { https://hal.archives-ouvertes.fr/hal-01137918/file/orthey_2015b.pdf },
-    HAL_ID = { hal-01137918 },
-    HAL_VERSION = { v1 }
+@CONFERENCE{ kudruss_ichr_2015,
+  AUTHOR = {Kudruss, Manuel and Naveau, Maximilien and Stasse, Olivier and Mansard,
+	Nicolas and Kirches, Christian and Soueres, Philippe and Mombaur, Katja},
+  TITLE = {Optimal Control for Whole-Body Motion Generation using Center-of-Mass
+	Dynamics for Predefined Multi-Contact Configurations},
+	BOOKTITLE = ichr,
+  ADRESSE = { Seoul, Korea },
+  YEAR = { 2015 }
+}
+
+@CONFERENCE{ matan_biorob_2016,
+  AUTHOR = {Matan, Karlinski and Naveau, Maximilien and Albert, Mukovskiy and Stasse, Olivier and Tamar, Flash and Philippe , Sou\`eres},
+  TITLE = {Robust human-inspired power law trajectories for humanoid HRP-2 robot},
+  YEAR = {2016},
+  ADDRESSE = { Singapore },
+  BOOKTITLE = biorob
+}
+
+@UNPUBLISHED{ mukovskiy_tro_2016 ,
+  AUTHOR = {Mukovskiy, Albert and Vassallo, Christian and Naveau, Maximilien and Stasse, Olivier and Sou?res, Philippe and A. Giese, Martin},
+  TITLE = {Adaptive synthesis of dynamically feasible full-body movements for the Humanoid Robot HRP-2 by flexible combination of learned dynamic movement primitives.},
+  NOTE = {submitted work to Journal of Robotics and Autonomous Systems}
 }
