correct typo and bib

--- a/src/cv.bib
+++ b/src/cv.bib
@@ -21,7 +21,8 @@
     JOURNAL = ral,
     PUBLISHER = { {IEEE } },
     NUMBER = { 99 },
-    YEAR = { 2016 }
+    YEAR = { May 2016 },
+    LANGUAGE = {English}
 }
 
 
@@ -30,7 +31,8 @@
     AUTHOR = { Naveau, Maximilien and Carpentier, Justin and Barthelemy, S{\'e}bastien and Stasse, Olivier and Sou{\`e}res, Philippe },
     BOOKTITLE = ichr,
     ADDRESS = { Madrid, Spain },
-    YEAR = { 2014 }
+    YEAR = { November 2014 },
+    LANGUAGE = {English}
 }
 
 @CONFERENCE { stasse_ichr_2014,
@@ -38,18 +40,18 @@
     AUTHOR = { Stasse, Olivier and Orthey, Andreas and Morsillo, Francesco and Geisert, Mathieu and Mansard, Nicolas and Naveau, Maximilien and Vassallo, Christian },
     BOOKTITLE = ichr,
     ADDRESS = { Madrid, Spain },
-    YEAR = { 2014 },
-    KEYWORDS = { Motion planning, visual servoing, Walking pattern generator, Whole body control }
+    YEAR = { November 2014 },
+    LANGUAGE = {English}
 }
 
 
 @CONFERENCE{ carpentier_icra_2016,
   AUTHOR = {J. Carpentier and S. Tonneau and M. Naveau and O. Stasse and N. Mansard},
-  TITLE = {A versatile and efficient pattern generator for generalized legged
-	locomotion},
+  TITLE = {A versatile and efficient pattern generator for generalized legged	locomotion},
   BOOKTITLE = icra,
-  ADRESSE = { Stockholm, Sweden },
-  YEAR = { 2016 }
+  ADDRESS = { Stockholm, Sweden },
+  YEAR = { May 2016 },
+  LANGUAGE = {English}
 }
 
 @CONFERENCE{ kudruss_ichr_2015,
@@ -58,20 +60,22 @@
   TITLE = {Optimal Control for Whole-Body Motion Generation using Center-of-Mass
 	Dynamics for Predefined Multi-Contact Configurations},
 	BOOKTITLE = ichr,
-  ADRESSE = { Seoul, Korea },
-  YEAR = { 2015 }
+  ADDRESS = { Seoul, Korea },
+  YEAR = { May 2015 },
 }
 
 @CONFERENCE{ matan_biorob_2016,
   AUTHOR = {Matan, Karlinski and Naveau, Maximilien and Albert, Mukovskiy and Stasse, Olivier and Tamar, Flash and Philippe , Sou\`eres},
   TITLE = {Robust human-inspired power law trajectories for humanoid HRP-2 robot},
-  YEAR = {2016},
-  ADDRESSE = { Singapore },
-  BOOKTITLE = biorob
+  YEAR = {June 2016},
+  ADDRESS = { Singapore },
+  BOOKTITLE = biorob,
+  LANGUAGE = {English}
 }
 
 @UNPUBLISHED{ mukovskiy_tro_2016 ,
   AUTHOR = {Mukovskiy, Albert and Vassallo, Christian and Naveau, Maximilien and Stasse, Olivier and Sou?res, Philippe and A. Giese, Martin},
   TITLE = {Adaptive synthesis of dynamically feasible full-body movements for the Humanoid Robot HRP-2 by flexible combination of learned dynamic movement primitives.},
-  NOTE = {submitted work to Journal of Robotics and Autonomous Systems}
+  NOTE = {submitted work to Journal of Robotics and Autonomous Systems},
+  LANGUAGE = {English}
 }
