--- a/src/cv.tex
+++ b/src/cv.tex
@@ -11,7 +11,7 @@
 \usepackage[utf8]{inputenc}
 %\usepackage{geometry}
 \usepackage[top=1.1cm, bottom=1.1cm, left=2cm, right=2cm]{geometry}
-\usepackage[french]{babel}
+\usepackage[english]{babel}
 
 %\usepackage{bibentry}
 %\bibliographystyle{ieeetr}
@@ -41,13 +41,11 @@
 
 \begin{document}
 
-\makeatletter
-
-\makeatother
-
+\vspace*{1cm}
 
 \maketitle
 
+\vspace*{1cm}
 
 \section{Formations}
 \cventry{2013 -- 2016 (Soutenenace \`a venir)}{Doctorat en robotique}
@@ -65,7 +63,7 @@ de l'\^etre humain, pour les robots humano\"ides".}
 \cventry{2005 -- 2010}{Classe pr\'eparatoire au grandes \'ecoles + Baccalaur\'eat}{\`a Caen (14)}{}{}{Sp\'ecialit\'e : Physique Science de l'Ing\'enieur}%
 %
 \cventry{Langue}{Anglais}{lu, \'ecrit, parl\'e}{TOEIC 865/990 2012}{}{Publications dans des revues internationales, stage ing\'enieur de 6 mois \`a  Birmingham, Royaume Unis}
-\cventry{}{Autre langue}{notion de chinois, italien}{}{}{}
+\cventry{}{Autres langues}{notion de chinois, italien}{}{}{}
 %
 \cventry{Informatique}{Logiciels}{cmake, git, OpenCV, Matlab(Simulink), LabView, CATIA(V5R20), Adams}
 {}{}{}
@@ -77,7 +75,7 @@ de l'\^etre humain, pour les robots humano\"ides".}
 {
 \begin{itemize}%
 \items d\'eveloppement d'algorithmes de marche de robot humano\"ides et locomotion multi-contact,
-\items recherche en collaboration avec des partenaires \'etrangers sur des th\'ematiques interdisciplinaires autour du mouvement des syst\`emes anthropomorphes et du mouvement humain, dans le cadre du projet Koroibot.
+\items recherche en collaboration avec des partenaires \'etrangers sur des th\'ematiques interdisciplinaires autour du mouvement des syst\`emes anthropomorphes et du mouvement humain, dans le cadre du projet europ\'een Koroibot.
 \items int\'egration logiciels sur le robot humano\"ide \emph{HRP-2}.
 \newline{}
 \end{itemize}
@@ -116,37 +114,35 @@ de l'\^etre humain, pour les robots humano\"ides".}
 
 \newpage
 
+
 \section{Publications Scientifiques}
 
 Tout les papiers peuvent \^etre t\'el\'echarg\'es \`a cette adresse :
 \url{http://projects.laas.fr/gepetto/index.php/Publications/ByAuthor?author=Maximilien_Naveau}\\
 
+
 \subsection{Revues Scientifiques}
 
 \begin{itemize}%
-
 \items \fullcite{naveau_ral_2016}
-
 \end{itemize}%
 
+\vspace*{0.3cm}
 \subsection{Articles de Conf\'erences}
 
 \begin{itemize}%
-
 \items \fullcite{matan_biorob_2016}
 \items \fullcite{carpentier_icra_2016}
 \items \fullcite{kudruss_ichr_2015}
 \items \fullcite{naveau_ichr_2014}
 \items \fullcite{stasse_ichr_2014}
-
 \end{itemize}
 
+\vspace*{0.3cm}
 \subsection{Articles en Cours de Soumission}
 
 \begin{itemize}%
-
 \items \fullcite{mukovskiy_tro_2016}
-
 \end{itemize}
 
 \section{T\^aches Administratives}
