upgrade the repos to contain french and english cv

--- a/src/cv.tex
+++ b/src/cv.tex
@@ -10,7 +10,7 @@
                 
 \usepackage[utf8]{inputenc}
 %\usepackage{geometry}
-\usepackage[top=1.1cm, bottom=1.1cm, left=2cm, right=2cm]{geometry}
+\usepackage[top=0.5cm, bottom=1.0cm, left=2cm, right=2cm]{geometry}
 \usepackage[english]{babel}
 
 %\usepackage{bibentry}
@@ -32,7 +32,7 @@
 %\homepage{www.google.com}
 \mobile{06 48 36 37 42} 
 \extrainfo{25 ans -- Permis B}
-\photo[3cm]{../figures/DSC00009.jpeg}
+\photo[5cm]{../figures/DSC00009.jpeg}
 
 \renewcommand*{\firstnamefont}{\fontsize{30pt}{20}\mdseries\upshape}
 \renewcommand*{\familynamefont}{\fontsize{30pt}{20}\mdseries\upshape}
@@ -49,18 +49,19 @@
 
 \section{Formations}
 \cventry{2013 -- 2016 (Soutenenace \`a venir)}{Doctorat en robotique}
-{au LAAS-CNRS}
+{LAAS-CNRS, \`a Toulouse (31)}
 {Universit\'e Paul-Sabatier, Toulouse III}
 {encadr\'e par Olivier Stasse.}
 {"Strat\'egies de marche avanc\'ees, et inspir\'ees
 de l'\^etre humain, pour les robots humano\"ides".}
-\cventry{2008 -- 2013}{Double dipl\^ome \'equivalent M2}
-{Dipl\^ome d'\emph{ing\'enieur} (Supm\'eca Toulon) et de \emph{Master en vision et commande} (Universit\'e de Toulon}
-{Campus de Toulon (83)}
-{}
+\cventry{2013}{Master en vision et commande}{Universit\'e de Toulon (83)}{}{}{}
+\cventry{2010 -- 2013}{Dipl\^ome d'ing\'enieur}
+{Supm\'eca Toulon(83)}{}{}
 {Sp\'ecialit\'e : robotique et syst\^eme m\'ecatronique}
 %
-\cventry{2005 -- 2010}{Classe pr\'eparatoire au grandes \'ecoles + Baccalaur\'eat}{\`a Caen (14)}{}{}{Sp\'ecialit\'e : Physique Science de l'Ing\'enieur}%
+\cventry{2008 -- 2010}{Classe pr\'eparatoire au grandes \'ecoles}{Lyc\'ee Victor Hugo}{\`a Caen (14)}{}{Sp\'ecialit\'e : Physique Science de l'Ing\'enieur}%
+%
+\cventry{2008}{Baccalaur\'eat S}{Lyc\'ee Allende}{\`a H\'erouville (14)}{}{Sp\'ecialit\'e : SVT et Math\'ematique}%
 %
 \cventry{Langue}{Anglais}{lu, \'ecrit, parl\'e}{TOEIC 865/990 2012}{}{Publications dans des revues internationales, stage ing\'enieur de 6 mois \`a  Birmingham, Royaume Unis}
 \cventry{}{Autres langues}{notion de chinois, italien}{}{}{}
@@ -112,7 +113,7 @@ de l'\^etre humain, pour les robots humano\"ides".}
 \end{itemize}
 }
 
-\newpage
+%\newpage
 
 
 \section{Publications Scientifiques}
@@ -142,7 +143,10 @@ Tout les papiers peuvent \^etre t\'el\'echarg\'es \`a cette adresse :
 \subsection{Articles en Cours de Soumission}
 
 \begin{itemize}%
-\items \fullcite{mukovskiy_tro_2016}
+\items journals :
+  \fullcite{mukovskiy_tro_2016}
+\item conference papers :
+  \fullcite{ramirez:ichr:2016}
 \end{itemize}
 
 \section{T\^aches Administratives}
