--- a/src/cv.bib
+++ b/src/cv.bib
@@ -15,14 +15,14 @@
 
 @STRING{biorob = "Int. {C}onf. on {B}iomedical {R}obotics and {B}iomechatronics"}
 
+@STRING{tro = "Int. {J}our. of {T}ransactions on {R}obotics"}
+
+
 @ARTICLE { naveau_ral_2016,
     TITLE = { {A Reactive Walking Pattern Generator Based on Nonlinear Model Predictive Control} },
     AUTHOR = { Naveau, Maximilien and Kudruss, Manuel and Stasse, Olivier and Kirches, Christian and Mombaur, Katja and Sou{\`e}res, Philippe },
     JOURNAL = ral,
-    PUBLISHER = { {IEEE } },
-    NUMBER = { 99 },
-    YEAR = { May 2016 },
-    LANGUAGE = {English}
+    YEAR = { 2016 }
 }
 
 
@@ -30,18 +30,14 @@
     TITLE = { {METAPOD Template META-programming applied to dynamics: CoP-CoM trajectories filtering} },
     AUTHOR = { Naveau, Maximilien and Carpentier, Justin and Barthelemy, S{\'e}bastien and Stasse, Olivier and Sou{\`e}res, Philippe },
     BOOKTITLE = ichr,
-    ADDRESS = { Madrid, Spain },
-    YEAR = { November 2014 },
-    LANGUAGE = {English}
+    YEAR = { 2014 }
 }
 
 @CONFERENCE { stasse_ichr_2014,
     TITLE = { {Airbus/future of aircraft factory HRP-2 as universal worker proof of concept} },
     AUTHOR = { Stasse, Olivier and Orthey, Andreas and Morsillo, Francesco and Geisert, Mathieu and Mansard, Nicolas and Naveau, Maximilien and Vassallo, Christian },
     BOOKTITLE = ichr,
-    ADDRESS = { Madrid, Spain },
-    YEAR = { November 2014 },
-    LANGUAGE = {English}
+    YEAR = { 2014 }
 }
 
 
@@ -49,9 +45,7 @@
   AUTHOR = {J. Carpentier and S. Tonneau and M. Naveau and O. Stasse and N. Mansard},
   TITLE = {A versatile and efficient pattern generator for generalized legged	locomotion},
   BOOKTITLE = icra,
-  ADDRESS = { Stockholm, Sweden },
-  YEAR = { May 2016 },
-  LANGUAGE = {English}
+  YEAR = { 2016 }
 }
 
 @CONFERENCE{ kudruss_ichr_2015,
@@ -59,23 +53,61 @@
 	Nicolas and Kirches, Christian and Soueres, Philippe and Mombaur, Katja},
   TITLE = {Optimal Control for Whole-Body Motion Generation using Center-of-Mass
 	Dynamics for Predefined Multi-Contact Configurations},
-	BOOKTITLE = ichr,
-  ADDRESS = { Seoul, Korea },
-  YEAR = { May 2015 },
+  BOOKTITLE = ichr,
+  YEAR = { 2015 },
 }
 
 @CONFERENCE{ matan_biorob_2016,
   AUTHOR = {Matan, Karlinski and Naveau, Maximilien and Albert, Mukovskiy and Stasse, Olivier and Tamar, Flash and Philippe , Sou\`eres},
   TITLE = {Robust human-inspired power law trajectories for humanoid HRP-2 robot},
   YEAR = {June 2016},
-  ADDRESS = { Singapore },
   BOOKTITLE = biorob,
-  LANGUAGE = {English}
 }
 
 @UNPUBLISHED{ mukovskiy_tro_2016 ,
   AUTHOR = {Mukovskiy, Albert and Vassallo, Christian and Naveau, Maximilien and Stasse, Olivier and Sou?res, Philippe and A. Giese, Martin},
   TITLE = {Adaptive synthesis of dynamically feasible full-body movements for the Humanoid Robot HRP-2 by flexible combination of learned dynamic movement primitives.},
   NOTE = {submitted work to Journal of Robotics and Autonomous Systems},
-  LANGUAGE = {English}
+  YEAR={2016}
+}
+
+@INPROCEEDINGS{ ramirez:ichr:2016,
+  title = {Motion Generation for Pulling a Fire Hose by a Humanoid Robot},
+  author = {I. G. Ramirez-Alpizar and M. Naveau and C. Benazeth and O. Stasse and
+J.-P. Laumond and K. Harada and E. Yoshida},
+  booktitle = ichr,
+  year = {2016}
+}
+
+@UNPUBLISHED{ orthey:homotopic:2015,
+  author = {Orthey, Andreas and Ivan, Vladimir and Naveau, Maximilien and Yang,
+	Yiming and Stasse, Olivier and Vijayakumar, Sethu},
+  title = {Homotopic particle motion planning for humanoid robotics},
+  year = {2015},
+  note = {submitted work to Int. {J}our. of {T}ransactions on {R}obotics}
+}
+
+@PhDThesis{phd:mnaveau:2016,
+title = {Advanced human inspired walking strategies for humanoid robots},
+author = {Naveau, Maximilien},
+school = {Universit\'e Paul Sabatier Toulouse III},
+year = {2016}}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@INPROCEEDINGS{deits:ichr:14,
+  author = {Deits, Robin and Tedrake, Russ},
+  title = {Footstep Planning on Uneven Terrain with Mixed-Integer Convex Optimization},
+  booktitle = ichr,
+  year = {2014}
+}
+
+
+@ARTICLE{herdt:ar:2010,
+  author = {Herdt, Andrei and Diedam, Holger and Wieber, Pierre-Brice and Dimitrov,
+	Dimitar and Mombaur, Katja and Diehl, Moritz},
+  title = {Online walking motion generation with automatic footstep placement},
+  journal = advrob,
+  year = {2010}
 }
