update the CV rename it cv_french_2019.tex

--- a/src/cv.bib
+++ b/src/cv.bib
@@ -18,7 +18,7 @@
 @STRING{tro = "Int. {J}our. of {T}ransactions on {R}obotics"}
 
 
-@ARTICLE { naveau_ral_2016,
+@ARTICLE { naveau:ral:2016,
     TITLE = { {A Reactive Walking Pattern Generator Based on Nonlinear Model Predictive Control} },
     AUTHOR = { Naveau, Maximilien and Kudruss, Manuel and Stasse, Olivier and Kirches, Christian and Mombaur, Katja and Sou{\`e}res, Philippe },
     JOURNAL = ral,
@@ -26,14 +26,14 @@
 }
 
 
-@CONFERENCE { naveau_ichr_2014,
+@CONFERENCE { naveau:ichr:2014,
     TITLE = { {METAPOD Template META-programming applied to dynamics: CoP-CoM trajectories filtering} },
     AUTHOR = { Naveau, Maximilien and Carpentier, Justin and Barthelemy, S{\'e}bastien and Stasse, Olivier and Sou{\`e}res, Philippe },
     BOOKTITLE = ichr,
     YEAR = { 2014 }
 }
 
-@CONFERENCE { stasse_ichr_2014,
+@CONFERENCE { stasse:ichr:2014,
     TITLE = { {Airbus/future of aircraft factory HRP-2 as universal worker proof of concept} },
     AUTHOR = { Stasse, Olivier and Orthey, Andreas and Morsillo, Francesco and Geisert, Mathieu and Mansard, Nicolas and Naveau, Maximilien and Vassallo, Christian },
     BOOKTITLE = ichr,
@@ -41,14 +41,14 @@
 }
 
 
-@CONFERENCE{ carpentier_icra_2016,
+@CONFERENCE{ carpentier:icra:2016,
   AUTHOR = {J. Carpentier and S. Tonneau and M. Naveau and O. Stasse and N. Mansard},
   TITLE = {A versatile and efficient pattern generator for generalized legged	locomotion},
   BOOKTITLE = icra,
   YEAR = { 2016 }
 }
 
-@CONFERENCE{ kudruss_ichr_2015,
+@CONFERENCE{ kudruss:ichr:2015,
   AUTHOR = {Kudruss, Manuel and Naveau, Maximilien and Stasse, Olivier and Mansard,
 	Nicolas and Kirches, Christian and Soueres, Philippe and Mombaur, Katja},
   TITLE = {Optimal Control for Whole-Body Motion Generation using Center-of-Mass
@@ -57,14 +57,14 @@
   YEAR = { 2015 },
 }
 
-@CONFERENCE{ matan_biorob_2016,
+@CONFERENCE{ matan:biorob:2016,
   AUTHOR = {Matan, Karlinski and Naveau, Maximilien and Albert, Mukovskiy and Stasse, Olivier and Tamar, Flash and Philippe , Sou\`eres},
   TITLE = {Robust human-inspired power law trajectories for humanoid HRP-2 robot},
   YEAR = {June 2016},
   BOOKTITLE = biorob,
 }
 
-@UNPUBLISHED{ mukovskiy_tro_2016 ,
+@UNPUBLISHED{ mukovskiy:tro:2016 ,
   AUTHOR = {Mukovskiy, Albert and Vassallo, Christian and Naveau, Maximilien and Stasse, Olivier and Sou?res, Philippe and A. Giese, Martin},
   TITLE = {Adaptive synthesis of dynamically feasible full-body movements for the Humanoid Robot HRP-2 by flexible combination of learned dynamic movement primitives.},
   NOTE = {submitted work to Journal of Robotics and Autonomous Systems},
@@ -93,21 +93,3 @@ author = {Naveau, Maximilien},
 school = {Universit\'e Paul Sabatier Toulouse III},
 year = {2016}}
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-@INPROCEEDINGS{deits:ichr:14,
-  author = {Deits, Robin and Tedrake, Russ},
-  title = {Footstep Planning on Uneven Terrain with Mixed-Integer Convex Optimization},
-  booktitle = ichr,
-  year = {2014}
-}
-
-
-@ARTICLE{herdt:ar:2010,
-  author = {Herdt, Andrei and Diedam, Holger and Wieber, Pierre-Brice and Dimitrov,
-	Dimitar and Mombaur, Katja and Diehl, Moritz},
-  title = {Online walking motion generation with automatic footstep placement},
-  journal = advrob,
-  year = {2010}
-}
