--- a/src/cv_english.tex
+++ b/src/cv_english.tex
@@ -151,9 +151,9 @@
 \large{\underline{Journal papers :}}
 
 \begin{itemize}%
-\items \fullcite{mukovskiy_tro_2016}
+\items \fullcite{mukovskiy:tro:2016}
 \items \fullcite{orthey:homotopic:2015}
-\items \fullcite{naveau_ral_2016}
+\items \fullcite{naveau:ral:2016}
 \end{itemize}%
 
 %vspace*{0.3cm}
@@ -162,11 +162,11 @@
 
 \begin{itemize}%
 \items \fullcite{ramirez:ichr:2016}
-\items \fullcite{matan_biorob_2016}
-\items \fullcite{carpentier_icra_2016}
-\items \fullcite{kudruss_ichr_2015}
-\items \fullcite{naveau_ichr_2014}
-\items \fullcite{stasse_ichr_2014}
+\items \fullcite{matan:biorob:2016}
+\items \fullcite{carpentier:icra:2016}
+\items \fullcite{kudruss:ichr:2015}
+\items \fullcite{naveau:ichr:2014}
+\items \fullcite{stasse:ichr:2014}
 \end{itemize}
 
 %vspace*{0.3cm}
@@ -182,9 +182,9 @@
 Published papers can all be downloaded from this link :
 \url{http://projects.laas.fr/gepetto/index.php/Publications/ByAuthor?author=Maximilien_Naveau}\\
 
-%\section{Interests}
+\section{Interests}
 
-%\cventry{Music}{Instruments}{Drum (10 years), Bass (1 year)}{}{}{}
-%\cventry{}{Creation of 2 bands}{"MARACLAAS" and "Open Doors" }{ concerts in different places in 2012-2013 in Toulon (France) + music festival in June 2015 in Toulouse (France)}{}{}
+\cventry{Music}{Instruments}{Drum (10 years), Bass (1 year)}{}{}{}
+\cventry{}{Creation of 2 bands}{"MARACLAAS" and "Open Doors" }{ concerts in different places in 2012-2013 in Toulon (France) + music festival in June 2015 in Toulouse (France)}{}{}
 
 \end{document}
