--- a/src/cv_french_2019.tex
+++ b/src/cv_french_2019.tex
@@ -23,13 +23,17 @@
 %\setlength{\hintscolumnwidth}{2.7cm}                % if you want to change the width of the column with the dates
 %\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
-\usepackage[style=ieee-alphabetic, backend=bibtex, giveninits=true]{biblatex}
-\nocite{*}
-\bibliographystyle{plain}
-\bibliography{cv}                                   % 'publications' is the name of a BibTeX file
+\usepackage{bibentry}
+\nobibliography*
+
+\bibliographystyle{my_plain}
+
+\usepackage{etoolbox}
+\newtoggle{myrefs}
+\newcommand{\myref}[1]{\iftoggle{myrefs}{\textbf{#1}}{#1}}
 
 \name{Maximilien}{Naveau}
-\title{Post-Doc en robotique humano\"ide}           % optional, remove / comment the line if not wanted
+\title{Post-Doc en robotique humano\"ide}            % optional, remove / comment the line if not wanted
 \address{Friedrichstrasse 16}{T\"ubingen}{Allemagne} % optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
 \phone[mobile]{+33~(6)~48~36~37~42}                  % optional, remove / comment the line if not wanted
 % \phone[fixed]{+2~(345)~678~901}                    % optional, remove / comment the line if not wanted
@@ -59,13 +63,13 @@
 %-----       resume       ---------------------------------------------------------
 
 \makecvtitle
-\vspace*{-1.2cm}
+\vspace*{-0.2cm}
 
 \section{Formations}
 \cventry{2013 -- 2016}{Doctorat en robotique}
 {LAAS-CNRS, \`a Toulouse (31)}
 {Universit\'e Paul-Sabatier, Toulouse III}
-{encadr\'e par Olivier Stasse.}
+{encadr\'e par Olivier Stasse}
 {"Strat\'egies de marche avanc\'ees, et inspir\'ees
 de l'\^etre humain, pour les robots humano\"ides".}
 \cventry{2013}{Master en vision et commande}{Universit\'e de Toulon (83)}{}{}{}
@@ -82,7 +86,7 @@ de l'\^etre humain, pour les robots humano\"ides".}
   stage ing\'enieur de 6 mois \`a  Birmingham, Royaume Unis}
 \cventry{}{Autres langues}{notion de chinois, italien, allemand}{}{}{}
 %
-\cventry{Informatique}{Logiciels}{cmake, git, eigen, numpy,
+\cventry{Informatique}{Logiciels}{cmake, git, eigen, numpy, ROS, Bamboo,
                                   LAAS-CNRS/Gepetto Team Framework}
 {}{}{}
 %
@@ -92,16 +96,17 @@ de l'\^etre humain, pour les robots humano\"ides".}
 \cventry{2016-2020}{Post-Doc}{MPI-IS}{T\"ubingen}{Allemagne}
 {
   \begin{itemize}%
+    \items implementation d'une architecture de contr\^ole bas\'ee sur le 
+    dynamic-graph (d\'evelopp\'e au LAAS-CNRS). L'architecture contient
+    depuis les logiciels temps r\'eel bas niveau jusqu'à l'int\'egration ROS.
     \items d\'eveloppement d'algorithmes de locomotion pour robot humano\"ides
-    et quadruped,
-    \items mise en place d'une integration continue des codes qui sont au coeur
-    de l'architecure de control du laboratoire.
-    \items mise en open source de ces m\^eme codes
-    (https://github.com/machines-in-motion/).
-    \items implementation d'une architecture de control bas\'ee sur le 
-    dynamic-graph (structure de control d\'evelopp\'e au LAAS-CNRS).
+    et quadrup\`ede.
     \items int\'egration logiciels sur le robot humano\"ide \emph{Athena} et
     sur le robot quadrup\`ede \emph{Solo}.
+    \items mise en place d'une integration continue, des codes qui sont au coeur
+    de l'architecure de control du laboratoire.
+    \items mise en open source de ces m\^eme codes
+    (https://github.com/machines-in-motion/).    
   \end{itemize}
 }
 \cventry{2013-2016}{Doctorant}{LAAS-CNRS}{Toulouse}{France}
@@ -146,21 +151,23 @@ de l'\^etre humain, pour les robots humano\"ides".}
 
 \section{Publications Scientifiques}
 
+% Underline my name
+\toggletrue{myrefs}
+
 Tout les papiers peuvent \^etre t\'el\'echarg\'es \`a cette adresse :
 \url{http://projects.laas.fr/gepetto/index.php/Publications/ByAuthor?author=Maximilien_Naveau}\\
 
 \large{\underline{PhD thesis :}}
 
 \begin{itemize}%
-\items \fullcite{phd:mnaveau:2016}
+\normalsize{\items} \footnotesize{\bibentry{phd:mnaveau:2016}}
 \end{itemize}
 
 \large{\underline{Journal papers :}}
 
 \begin{itemize}%
-\items \fullcite{mukovskiy:tro:2016}
-\items \fullcite{orthey:homotopic:2015}
-\items \fullcite{naveau:ral:2016}
+\normalsize{\items} \footnotesize{\bibentry{mukovskiy:tro:2016}}
+\normalsize{\items} \footnotesize{\bibentry{naveau:ral:2016}}
 \end{itemize}%
 
 %vspace*{0.3cm}
@@ -168,13 +175,16 @@ Tout les papiers peuvent \^etre t\'el\'echarg\'es \`a cette adresse :
 \large{\underline{Conference papers :}}
 
 \begin{itemize}%
-\items \fullcite{ramirez:ichr:2016}
-\items \fullcite{matan:biorob:2016}
-\items \fullcite{carpentier:icra:2016}
-\items \fullcite{kudruss:ichr:2015}
-\items \fullcite{naveau:ichr:2014}
-\items \fullcite{stasse:ichr:2014}
+\normalsize{\items} \footnotesize{\bibentry{ramirez:ichr:2016}}
+\normalsize{\items} \footnotesize{\bibentry{matan:biorob:2016}}
+\normalsize{\items} \footnotesize{\bibentry{carpentier:icra:2016}}
+\normalsize{\items} \footnotesize{\bibentry{kudruss:ichr:2015}}
+\normalsize{\items} \footnotesize{\bibentry{naveau:ichr:2014}}
+\normalsize{\items} \footnotesize{\bibentry{stasse:ichr:2014}}
 \end{itemize}
+
+\newsavebox\mytempbib
+\savebox\mytempbib{\parbox{\textwidth}{\bibliography{cv_abrv}}}
 
 %vspace*{0.3cm}
 %\subsection{In submission}
@@ -184,15 +194,15 @@ Tout les papiers peuvent \^etre t\'el\'echarg\'es \`a cette adresse :
 \items IJRR, IEEE T-RO, IEEE RA-L, ICRA, IROS, Humanoids.
 \end{itemize}
 
-\section{T\^aches Administratives}
-
-\cventry{Mai 2015}{Doctorant}{\'Ecole Doctoral EDSYS}{}{France}
-{
-\begin{itemize}
-\items Organisation du congr\`es de l'\'ecole doctorale EDSYS.
-\items Gestion de la logistique pour les deux jours du congr\`es.
-\end{itemize}
-}
+% \section{T\^aches Administratives}
+%
+% \cventry{Mai 2015}{Doctorant}{\'Ecole Doctoral EDSYS}{}{France}
+% {
+% \begin{itemize}
+% \items Organisation du congr\`es de l'\'ecole doctorale EDSYS.
+% \items Gestion de la logistique pour les deux jours du congr\`es.
+% \end{itemize}
+% }
 
 
 % \section{Centres d'inter\^et}
