update the cover letter

--- a/src/cv_abrv.bib
+++ b/src/cv_abrv.bib
@@ -85,3 +85,16 @@ author = {Naveau, M.},
 school = {Universit\'e Paul Sabatier Toulouse III},
 year = {2016}}
 
+@article{stasse:frontiers:2018,
+  TITLE = {{Benchmarking the HRP-2 humanoid robot during locomotion}},
+  AUTHOR = {Stasse, O. and Giraud-Esclasse, K. and Brousse, E. and Naveau, M.  and R{\'e}gnier, R. and Avrin, G. and Sou{\`e}res, P.},
+  JOURNAL = {{Frontiers in Robotics and AI}},
+  YEAR = {2018},
+}
+
+@INPROCEEDINGS{ stein:ichr:2017,
+  title = {{Closed loop control of walking motions with adaptive choice of directions for the iCub humanoid robot}},
+  author = {Stein, K. and Hu, Y. and Kudruss, M. and Naveau, M.  and Mombaur, K.},
+  booktitle = ichr,
+  year = {2017}
+}
