--- a/src/cv_french_2019.tex
+++ b/src/cv_french_2019.tex
@@ -33,7 +33,7 @@
 \newcommand{\myref}[1]{\iftoggle{myrefs}{\textbf{#1}}{#1}}
 
 \name{Maximilien}{Naveau}
-\title{Post-Doc en robotique humano\"ide}            % optional, remove / comment the line if not wanted
+\title{Post-Doctorant en robotique humano\"ide}            % optional, remove / comment the line if not wanted
 \address{Friedrichstrasse 16}{T\"ubingen}{Allemagne} % optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
 \phone[mobile]{+33~(6)~48~36~37~42}                  % optional, remove / comment the line if not wanted
 % \phone[fixed]{+2~(345)~678~901}                    % optional, remove / comment the line if not wanted
@@ -63,7 +63,66 @@
 %-----       resume       ---------------------------------------------------------
 
 \makecvtitle
-\vspace*{-0.2cm}
+\vspace*{-1cm}
+
+\section{Exp\'erience professionnelle}
+\cventry{2016-2020}{Post-Doc}{MPI-IS}{T\"ubingen}{Allemagne}
+{
+  \begin{itemize}%
+    \items impl\'ementation d'une architecture de contr\^ole bas\'ee sur le
+    dynamic-graph (d\'evelopp\'e au LAAS-CNRS). L'architecture comprend
+    les logiciels temps r\'eel (bas niveau) jusqu'\`a l'int\'egration ROS.
+    \items d\'eveloppement d'algorithmes de locomotion pour robots humano\"ides
+    et quadrup\`edes.
+    \items int\'egration des logiciels sur le robot humano\"ide \emph{Athena} et
+    sur le robot quadrup\`ede \emph{Solo}.
+    \items mise en place d'une int\'egration continue, des codes qui sont au
+    coeur de l'architecture de contr\^ole du laboratoire.
+    \items mise en open source de ces m\^eme codes
+    (https://github.com/machines-in-motion/).
+  \end{itemize}
+}
+\cventry{2013-2016}{Doctorant}{LAAS-CNRS}{Toulouse}{France} 
+{
+  \begin{itemize}%
+    \items d\'eveloppement d'algorithmes de locomotion pour robots humano\"ides,
+    \items recherche en collaboration avec des partenaires \'etrangers sur des
+    th\'ematiques interdisciplinaires autour du mouvement des syst\`emes
+    anthropomorphes et du mouvement humain, dans le cadre du projet europ\'een
+    Koroibot.
+    \items int\'egration des logiciels sur le robot humano\"ide \emph{HRP-2}.
+  \end{itemize}
+}
+%
+%
+\cventry{Mars 2013\\\`a Septembre 2013}{Stagiaire}{CEA Saclay}{Gif-sur-Yvette}
+{France}
+{
+  \begin{itemize}%
+    \items d\'eveloppement d'un algorithme d'\'evitement d'obstacles par
+    st\'er\'eovision,
+    \items int\'egration du syst\`eme AVISO sur le robot ASSIST.
+  \end{itemize}
+}
+%
+%
+\cventry{Octobre 2012\\\`a F\'evrier 2013}{\'El\`eve}{Supmeca Toulon}{}{France}
+{
+  \begin{itemize}%
+    \items Conception, fabrication et instrumentation d'un navire \`a voile autonome,
+    travail d'\'equipe (19 personnes) de 5 mois,
+  \end{itemize}
+}
+%
+%
+%
+\cventry{Septembre 2012\\\`a Janvier 2013}{Stagiaire}{Universit\'e de Birmingham}{}{Royaume-Uni}
+{
+  \begin{itemize}%
+    \items D\'eveloppement d'un algorithme de compliance active d'un bras manipulateur Kuka,
+    travail en autonomie de 5 mois, dans le cadre du projet GeRT (Generalizing Robot Manipulation Tasks)
+  \end{itemize}
+}
 
 \section{Formations}
 \cventry{2013 -- 2016}{Doctorat en robotique}
@@ -75,87 +134,32 @@ de l'\^etre humain, pour les robots humano\"ides".}
 \cventry{2013}{Master en vision et commande}{Universit\'e de Toulon (83)}{}{}{}
 \cventry{2010 -- 2013}{Dipl\^ome d'ing\'enieur}
 {Supm\'eca Toulon(83)}{}{}
-{Sp\'ecialit\'e : robotique et syst\^eme m\'ecatronique}
+{Sp\'ecialit\'e : robotique et syst\`emes m\'ecatroniques}
 %
-\cventry{2008 -- 2010}{Classe pr\'eparatoire au grandes \'ecoles}{Lyc\'ee Victor Hugo}{\`a Caen (14)}{}{Sp\'ecialit\'e : Physique Science de l'Ing\'enieur}%
+\cventry{2008 -- 2010}{Classe pr\'eparatoire aux grandes \'ecoles}{Lyc\'ee Victor Hugo}{\`a Caen (14)}{}{Sp\'ecialit\'e : Physique Sciences de l'Ing\'enieur}%
 %
-\cventry{2008}{Baccalaur\'eat S}{Lyc\'ee Allende}{\`a H\'erouville (14)}{}{Sp\'ecialit\'e : SVT et Math\'ematique}%
+\cventry{2008}{Baccalaur\'eat S}{Lyc\'ee Allende}{\`a H\'erouville St-Clair (14)}{}{Sp\'ecialit\'e : SVT et Math\'ematiques}%
 %
 \cventry{Langue}{Anglais}{lu, \'ecrit, parl\'e}{TOEIC 865/990 2012}{}{
   Publications dans des revues internationales,
-  stage ing\'enieur de 6 mois \`a  Birmingham, Royaume Unis}
+  stage ing\'enieur de 6 mois \`a  Birmingham, Royaume Uni}
 \cventry{}{Autres langues}{notion de chinois, italien, allemand}{}{}{}
 %
 \cventry{Informatique}{Logiciels}{cmake, git, eigen, numpy, ROS, Bamboo,
                                   LAAS-CNRS/Gepetto Team Framework}
 {}{}{}
 %
-\cventry{}{Language}{C/C++, python, bash}{}{}{}
+\cventry{}{Langage}{C/C++, python, bash}{}{}{}
 
-\section{Exp\'erience professionnelle}
-\cventry{2016-2020}{Post-Doc}{MPI-IS}{T\"ubingen}{Allemagne}
-{
-  \begin{itemize}%
-    \items implementation d'une architecture de contr\^ole bas\'ee sur le 
-    dynamic-graph (d\'evelopp\'e au LAAS-CNRS). L'architecture contient
-    depuis les logiciels temps r\'eel bas niveau jusqu'à l'int\'egration ROS.
-    \items d\'eveloppement d'algorithmes de locomotion pour robot humano\"ides
-    et quadrup\`ede.
-    \items int\'egration logiciels sur le robot humano\"ide \emph{Athena} et
-    sur le robot quadrup\`ede \emph{Solo}.
-    \items mise en place d'une integration continue, des codes qui sont au coeur
-    de l'architecure de control du laboratoire.
-    \items mise en open source de ces m\^eme codes
-    (https://github.com/machines-in-motion/).    
-  \end{itemize}
-}
-\cventry{2013-2016}{Doctorant}{LAAS-CNRS}{Toulouse}{France}
-{
-  \begin{itemize}%
-    \items d\'eveloppement d'algorithmes de locomotion pour robot humano\"ides,
-    \items recherche en collaboration avec des partenaires \'etrangers sur des
-    th\'ematiques interdisciplinaires autour du mouvement des syst\`emes
-    anthropomorphes et du mouvement humain, dans le cadre du projet europ\'een
-    Koroibot.
-    \items int\'egration logiciels sur le robot humano\"ide \emph{HRP-2}.
-  \end{itemize}
-}
-%
-%
-\cventry{Mars 2013\\\`a Septembre 2013}{Stagiaire}{CEA Saclay}{Gif-sur-Yvette}{France}
-{
-  \begin{itemize}%
-    \items d\'eveloppement d'un algorithme d'\'evitement d'obstacles par st\'er\'eovision,
-    \items int\'egration du syst\`eme AVISO sur le robot ASSIST.
-  \end{itemize}
-}
-%
-%
-\cventry{Octobre 2012\\\`a F\'evrier 2013}{\'El\`eve}{Supmeca Toulon}{}{France}
-{
-  \begin{itemize}%
-    \items Conception, fabrication et instrumentation d'un navire \`a voile autonome,
-    \items travail d'\'equipe (19 personnes) de 5 mois,
-  \end{itemize}
-}
-%
-%
-%
-\cventry{Septembre 2012\\\`a Janvier 2013}{Stagiaire}{Universit\'e de Birmingham}{}{Royaume-Uni}
-{
-  \begin{itemize}%
-    \items D\'eveloppement d'un algorithme de compliance active d'un bras manipulateur Kuka,
-    \items travail en autonomie de 5 mois, dans le cadre du projet GeRT (Generalizing Robot Manipulation Tasks)
-  \end{itemize}
-}
+
 
 \section{Publications Scientifiques}
 
 % Underline my name
 \toggletrue{myrefs}
 
-Tout les papiers peuvent \^etre t\'el\'echarg\'es \`a cette adresse :
-\url{http://projects.laas.fr/gepetto/index.php/Publications/ByAuthor?author=Maximilien_Naveau}\\
+Tout les articles scientifiques publi\'es peuvent \^etre t\'el\'echarg\'es
+via l'archive ouverte HAL \url{https://hal.archives-ouvertes.fr/}\\
 
 \large{\underline{PhD thesis :}}
 
@@ -166,6 +170,7 @@ Tout les papiers peuvent \^etre t\'el\'echarg\'es \`a cette adresse :
 \large{\underline{Journal papers :}}
 
 \begin{itemize}%
+\normalsize{\items} \footnotesize{\bibentry{stasse:frontiers:2018}}
 \normalsize{\items} \footnotesize{\bibentry{mukovskiy:tro:2016}}
 \normalsize{\items} \footnotesize{\bibentry{naveau:ral:2016}}
 \end{itemize}%
@@ -175,6 +180,7 @@ Tout les papiers peuvent \^etre t\'el\'echarg\'es \`a cette adresse :
 \large{\underline{Conference papers :}}
 
 \begin{itemize}%
+\normalsize{\items} \footnotesize{\bibentry{stein:ichr:2017}}
 \normalsize{\items} \footnotesize{\bibentry{ramirez:ichr:2016}}
 \normalsize{\items} \footnotesize{\bibentry{matan:biorob:2016}}
 \normalsize{\items} \footnotesize{\bibentry{carpentier:icra:2016}}
@@ -189,51 +195,10 @@ Tout les papiers peuvent \^etre t\'el\'echarg\'es \`a cette adresse :
 %vspace*{0.3cm}
 %\subsection{In submission}
 
-\large{\underline{Reviewer in :}}
+\section{Activit\'es  \'Editoriales}
+\large{\underline{Revues d'articles scientifiques :}}
 \begin{itemize}%
 \items IJRR, IEEE T-RO, IEEE RA-L, ICRA, IROS, Humanoids.
 \end{itemize}
 
-% \section{T\^aches Administratives}
-%
-% \cventry{Mai 2015}{Doctorant}{\'Ecole Doctoral EDSYS}{}{France}
-% {
-% \begin{itemize}
-% \items Organisation du congr\`es de l'\'ecole doctorale EDSYS.
-% \items Gestion de la logistique pour les deux jours du congr\`es.
-% \end{itemize}
-% }
-
-
-% \section{Centres d'inter\^et}
-
-% \cventry{Musique}{Instruments}{Batterie (10 ans), Basse (1 an)}{}{}{}
-% \cventry{}{Cr\'eation de 2 groupes de musiques}{"MARACLAAS" et "Open Doors" }{ concerts dans diverses sc\`enes \`a  Toulon + f\^ete de la musique 2015 \`a  Toulouse}{}{}
-
-% \clearpage
-% %-----       letter       ---------------------------------------------------------
-% % recipient data
-% \recipient{Company Recruitment team}{Company, Inc.\\123 somestreet\\some city}
-% \date{January 01, 1984}
-% \opening{Dear Sir or Madam,}
-% \closing{Yours faithfully,}
-% \enclosure[Attached]{curriculum vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
-% \makelettertitle
-
-% Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper neque sit amet lectus facilisis sed luctus nisl iaculis. Vivamus at neque arcu, sed tempor quam. Curabitur pharetra tincidunt tincidunt. Morbi volutpat feugiat mauris, quis tempor neque vehicula volutpat. Duis tristique justo vel massa fermentum accumsan. Mauris ante elit, feugiat vestibulum tempor eget, eleifend ac ipsum. Donec scelerisque lobortis ipsum eu vestibulum. Pellentesque vel massa at felis accumsan rhoncus.
-
-% Suspendisse commodo, massa eu congue tincidunt, elit mauris pellentesque orci, cursus tempor odio nisl euismod augue. Aliquam adipiscing nibh ut odio sodales et pulvinar tortor laoreet. Mauris a accumsan ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse vulputate sem vehicula ipsum varius nec tempus dui dapibus. Phasellus et est urna, ut auctor erat. Sed tincidunt odio id odio aliquam mattis. Donec sapien nulla, feugiat eget adipiscing sit amet, lacinia ut dolor. Phasellus tincidunt, leo a fringilla consectetur, felis diam aliquam urna, vitae aliquet lectus orci nec velit. Vivamus dapibus varius blandit.
-
-% Duis sit amet magna ante, at sodales diam. Aenean consectetur porta risus et sagittis. Ut interdum, enim varius pellentesque tincidunt, magna libero sodales tortor, ut fermentum nunc metus a ante. Vivamus odio leo, tincidunt eu luctus ut, sollicitudin sit amet metus. Nunc sed orci lectus. Ut sodales magna sed velit volutpat sit amet pulvinar diam venenatis.
-
-% Albert Einstein discovered that $e=mc^2$ in 1905.
-
-% \[ e=\lim_{n \to \infty} \left(1+\frac{1}{n}\right)^n \]
-
-% \makeletterclosing
-
-%\clearpage\end{CJK*}                              % if you are typesetting your resume in Chinese using CJK; the \clearpage is required for fancyhdr to work correctly with CJK, though it kills the page numbering by making \lastpage undefined
 \end{document}
-
-
-%% end of file `template.tex'.
