update the cover letter for the CNRS and teh french CV

--- a/src/cover_letters/2017-IHMC/cover_letter_3.tex
+++ b/src/cover_letters/2017-IHMC/cover_letter_3.tex
@@ -85,4 +85,4 @@ PARAGRAPH THREE: Request a personal interview and indicate your flexibility as t
 %----------------------------------------------------------------------------------------
 
 \end{newlfm}
-\end{document}
+\end{document}\grid
