--- a/src/cv_abrv.bib
+++ b/src/cv_abrv.bib
@@ -98,3 +98,10 @@ year = {2016}}
   booktitle = ichr,
   year = {2017}
 }
+
+@ARTICLE{ clever:ral:2017,
+  author={D. {Clever} and M. {Harant} and K. {Mombaur} and M. {Naveau} and O. {Stasse} and D. {Endres}},
+  journal=ral,
+  title={COCoMoPL: A Novel Approach for Humanoid Walking Generation Combining Optimal Control, Movement Primitives and Learning and its Transfer to the Real Robot HRP-2},
+  year={2017},
+}
