--- a/src/cv_english.tex
+++ b/src/cv_english.tex
@@ -161,6 +161,7 @@
 \large{\underline{Conference papers :}}
 
 \begin{itemize}%
+\items \fullcite{clever:ral:2017}
 \items \fullcite{ramirez:ichr:2016}
 \items \fullcite{matan:biorob:2016}
 \items \fullcite{carpentier:icra:2016}
