--- a/src/cv_french_2019.tex
+++ b/src/cv_french_2019.tex
@@ -158,21 +158,21 @@ de l'\^etre humain, pour les robots humano\"ides".}
 % Underline my name
 \toggletrue{myrefs}
 
-Tout les articles scientifiques publi\'es peuvent \^etre t\'el\'echarg\'es
-via l'archive ouverte HAL \url{https://hal.archives-ouvertes.fr/}\\
+Tout les articles sont disponibles via l'archive ouverte HAL
+\url{https://hal.archives-ouvertes.fr/}
 
 \large{\underline{PhD thesis :}}
 
 \begin{itemize}%
-\normalsize{\items} \footnotesize{\bibentry{phd:mnaveau:2016}}
+\normalsize{\item[[1]\hspace{-2mm}]} \footnotesize{\bibentry{phd:mnaveau:2016}}
 \end{itemize}
 
 \large{\underline{Journal papers :}}
 
 \begin{itemize}%
-\normalsize{\items} \footnotesize{\bibentry{stasse:frontiers:2018}}
-\normalsize{\items} \footnotesize{\bibentry{mukovskiy:tro:2016}}
-\normalsize{\items} \footnotesize{\bibentry{naveau:ral:2016}}
+\normalsize{\item[[2]\hspace{-2mm}]} \footnotesize{\bibentry{stasse:frontiers:2018}}
+\normalsize{\item[[3]\hspace{-2mm}]} \footnotesize{\bibentry{mukovskiy:tro:2016}}
+\normalsize{\item[[4]\hspace{-2mm}]} \footnotesize{\bibentry{naveau:ral:2016}}
 \end{itemize}%
 
 %vspace*{0.3cm}
@@ -180,13 +180,14 @@ via l'archive ouverte HAL \url{https://hal.archives-ouvertes.fr/}\\
 \large{\underline{Conference papers :}}
 
 \begin{itemize}%
-\normalsize{\items} \footnotesize{\bibentry{stein:ichr:2017}}
-\normalsize{\items} \footnotesize{\bibentry{ramirez:ichr:2016}}
-\normalsize{\items} \footnotesize{\bibentry{matan:biorob:2016}}
-\normalsize{\items} \footnotesize{\bibentry{carpentier:icra:2016}}
-\normalsize{\items} \footnotesize{\bibentry{kudruss:ichr:2015}}
-\normalsize{\items} \footnotesize{\bibentry{naveau:ichr:2014}}
-\normalsize{\items} \footnotesize{\bibentry{stasse:ichr:2014}}
+\normalsize{\item[[5]\hspace{-2mm}]} \footnotesize{\bibentry{clever:ral:2017}}
+\normalsize{\item[[6]\hspace{-2mm}]} \footnotesize{\bibentry{stein:ichr:2017}}
+\normalsize{\item[[7]\hspace{-2mm}]} \footnotesize{\bibentry{ramirez:ichr:2016}}
+\normalsize{\item[[8]\hspace{-2mm}]} \footnotesize{\bibentry{matan:biorob:2016}}
+\normalsize{\item[[9]\hspace{-2mm}]} \footnotesize{\bibentry{carpentier:icra:2016}}
+\normalsize{\item[[10]\hspace{-2mm}]} \footnotesize{\bibentry{kudruss:ichr:2015}}
+\normalsize{\item[[11]\hspace{-2mm}]} \footnotesize{\bibentry{naveau:ichr:2014}}
+\normalsize{\item[[12]\hspace{-2mm}]} \footnotesize{\bibentry{stasse:ichr:2014}}
 \end{itemize}
 
 \newsavebox\mytempbib
