Try to create an environment to compile the project.

--- a/src/cv.bib
+++ b/src/cv.bib
@@ -60,7 +60,7 @@
 @CONFERENCE{ matan:biorob:2016,
   AUTHOR = {Matan, Karlinski and Naveau, Maximilien and Albert, Mukovskiy and Stasse, Olivier and Tamar, Flash and Philippe , Sou\`eres},
   TITLE = {Robust human-inspired power law trajectories for humanoid HRP-2 robot},
-  YEAR = {June 2016},
+  YEAR = {2016},
   BOOKTITLE = biorob,
 }
 
@@ -93,3 +93,13 @@ author = {Naveau, Maximilien},
 school = {Universit\'e Paul Sabatier Toulouse III},
 year = {2016}}
 
+@ARTICLE{clever:ral:2017,
+  author={Clever, Debora and Harant, Monika and Mombaur, Katja and Naveau, Maximilien and Stasse, Olivier and Endres, Dominik},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={COCoMoPL: A Novel Approach for Humanoid Walking Generation Combining Optimal Control, Movement Primitives and Learning and its Transfer to the Real Robot HRP-2}, 
+  year={2017},
+  volume={2},
+  number={2},
+  pages={977-984},
+  keywords={Legged locomotion;Optimal control;Computational modeling;Training data;Humanoid robots;Dynamics;Humanoid and bipedal locomotion;learning and adaptive systems;optimization and optimal control},
+  doi={10.1109/LRA.2017.2657000}}
