--- a/src/cv_abrv.bib
+++ b/src/cv_abrv.bib
@@ -60,7 +60,7 @@
 @CONFERENCE{ matan:biorob:2016,
   AUTHOR = {Karlinski, M. and Naveau, M. and Mukovskiy, A. and Stasse, O. and Flash, T. and Sou{\`e}res, P.},
   TITLE = {Robust human-inspired power law trajectories for humanoid HRP-2 robot},
-  YEAR = {June 2016},
+  YEAR = {2016},
   BOOKTITLE = biorob,
 }
 
@@ -104,4 +104,12 @@ year = {2016}}
   journal=ral,
   title={COCoMoPL: A Novel Approach for Humanoid Walking Generation Combining Optimal Control, Movement Primitives and Learning and its Transfer to the Real Robot HRP-2},
   year={2017},
+}
+
+@UNPUBLISHED{ orthey:homotopic:2015,
+  author = {Orthey, Andreas and Ivan, Vladimir and Naveau, Maximilien and Yang,
+	Yiming and Stasse, Olivier and Vijayakumar, Sethu},
+  title = {Homotopic particle motion planning for humanoid robotics},
+  year = {2015},
+  note = {submitted work to Int. {J}our. of {T}ransactions on {R}obotics}
 }
