--- a/src/cv_english.tex
+++ b/src/cv_english.tex
@@ -15,8 +15,8 @@
 
 %\usepackage{bibentry}
 %\bibliographystyle{ieeetr}
-\usepackage[style=ieee-alphabetic,firstinits=true]{biblatex}
-\bibliography{cv}
+\usepackage[style=ieee-alphabetic,giveninits=true]{biblatex}
+\addbibresource{cv_abrv.bib}
 
 \newcommand{\makeauthorbold}[1]{%
 \DeclareNameFormat{author}{%
@@ -154,6 +154,7 @@
 \items \fullcite{mukovskiy:tro:2016}
 \items \fullcite{orthey:homotopic:2015}
 \items \fullcite{naveau:ral:2016}
+\items \fullcite{clever:ral:2017}
 \end{itemize}%
 
 %vspace*{0.3cm}
@@ -161,7 +162,6 @@
 \large{\underline{Conference papers :}}
 
 \begin{itemize}%
-\items \fullcite{clever:ral:2017}
 \items \fullcite{ramirez:ichr:2016}
 \items \fullcite{matan:biorob:2016}
 \items \fullcite{carpentier:icra:2016}
