--- a/src/cv_english.tex
+++ b/src/cv_english.tex
@@ -6,31 +6,22 @@
 % mettre numero de telephone
 
 \documentclass[11pt,a4paper]{moderncv}
-\moderncvtheme[blue]{classic}                
+\moderncvtheme[blue]{classic}
                 
 \usepackage[utf8]{inputenc}
-%\usepackage{geometry}
 \usepackage[top=1.1cm, bottom=1.1cm, left=2cm, right=2cm]{geometry}
 \usepackage[english]{babel}
-
-%\usepackage{bibentry}
-%\bibliographystyle{ieeetr}
-\usepackage[style=ieee-alphabetic,giveninits=true]{biblatex}
+\usepackage[style=ieee-alphabetic, giveninits=true, maxnames=4, minnames=4]{biblatex}
 \addbibresource{cv_abrv.bib}
 
-\newcommand{\makeauthorbold}[1]{%
 \DeclareNameFormat{author}{%
-  \ifnumequal{\value{listcount}}{1}
-    {\ifnumequal{\value{liststop}}{1}
-      {\expandafter\ifstrequal{##1}{#1}{\textbf{##1\addcomma\addspace ##4\addcomma\isdot}}{##1\addcomma\addspace ##4\addcomma\isdot}}
-      {\expandafter\ifstrequal{##1}{#1}{\textbf{##1\addcomma\addspace ##4}}{##1\addcomma\addspace ##4}}}
-    {\ifnumless{\value{listcount}}{\value{liststop}}
-      {\expandafter\ifstrequal{##1}{#1}{\textbf{\addcomma\addspace ##1\addcomma\addspace ##4}}{\addcomma\addspace ##1\addcomma\addspace ##4}}
-      {\expandafter\ifstrequal{##1}{#1}{\textbf{\addcomma\addspace ##1\addcomma\addspace ##4\addcomma\isdot}}{\addcomma\addspace ##1\addcomma\addspace ##4\addcomma\isdot}}%
-    }%
-}%
+  \ifthenelse{\equal{\namepartfamily}{Naveau}}
+    {\textbf{\namepartgivenabbr\addspace\namepartfamily}}
+    {\namepartgivenabbr\addspace\namepartfamily}%
+  \ifthenelse{\value{listcount}<\value{liststop}}
+    {\addcomma\addspace}
+    {}%
 }
-\makeauthorbold{Naveau}
 
 \DefineBibliographyExtras{french}{\restorecommand\mkbibnamelast}
 \newcommand*{\mkbibnamelast}[1]{#1}
@@ -40,12 +31,16 @@
 
 \firstname{Maximilien}
 \familyname{Naveau}
-\title{PhD student in humanoid robotics}              
-\address{6 rue Ren\'e Duguay Trouin 31400 Toulouse}{}    
-\email{maximilien.naveau@gmail.com}
-%\homepage{www.google.com}
-\mobile{06 48 36 37 42}
-\extrainfo{age : 25 -- Driving license -- French citizen}
+\title{Research engineer in humanoid robotics}
+% \address{16 rue de la nouvelle Ecosse 14320 Saint Martin de Fontenay}{}
+% \email{maximilien.naveau@gmail.com}
+% %\homepage{www.google.com}
+% \mobile{06 48 36 37 42}
+% \extrainfo{age : 25 -- Driving license -- French citizen}
+% \photo[4cm]{../figures/photo_officiel_small.JPG}
+
+\address{Toulouse}{}
+\extrainfo{Driving license -- French citizen}
 \photo[4cm]{../figures/photo_officiel_small.JPG}
 
 \renewcommand*{\firstnamefont}{\fontsize{30pt}{20}\mdseries\upshape}
@@ -55,35 +50,43 @@
 
 \begin{document}
 
-%\vspace*{1cm}
-
 \maketitle
 
-\vspace*{1cm}
-
-\section{Education}
-\cventry{2013 -- 2016}{PhD in Robotics}
-{in LAAS-CNRS}
-{Universit\'e Paul-Sabatier, Toulouse III}
-{supervised by Olivier Stasse. \textit{"Advanced human inspired walking strategies for humanoid robots".} Defense the 28$^{th}$ of September 2016}
-{}
-\cventry{2010 -- 2013}{2 master degrees}
-{Engineer Diploma (Supm\'eca Toulon) AND \emph{Master in vision and command} (University of Toulon)}
-{France}
-{}
-{Specialty : robotics and mechatronic systems}
-%
-\cventry{2008 -- 2010}{Preparatory classes to enter the French Engineering Schools + Baccalaur\'eat (A-level)}{in Caen, France}{}{}{Specialty : Mathematics, Physics, Engineer science}%
-%
-\cventry{Language}{English}{fluent : read, written, spoken}{TOEIC 865/990 2012}{}{Publications in international journals, training for 6 months in Birmingham UK}
-\cventry{}{Other languages}{notion of Chinese and Italian}{}{}{}
-%
-\cventry{Informatics}{Software}{cmake, git, OpenCV, Matlab(Simulink), LabView, CATIA(V5R20), Adams}
-{}{}{}
-%
-\cventry{}{Language}{C/C++,python,bash}{}{}{}
-
 \section{Work Experience}
+
+\cventry{2021-2025}{Research Engineer}{PAL-FRANCE}{Toulouse/Caen}{France}
+{
+  \begin{itemize}%
+    \items Remote-working in Caen, France
+    \items Integrator coordinator of the European project \textbf{AGIMUS}.
+    \items Software development for robotic applications.
+  \end{itemize}
+}
+
+\cventry{2020-2021}{Research Engineer}{LAAS-CNRS}{Toulouse}{France}
+{
+  \begin{itemize}%
+    \items Scientific coordinator of the European project \textbf{Memmo}.
+  \end{itemize}
+}
+
+\cventry{2016-2020}{Post-Doc}{MPI-IS}{T\"ubingen}{Allemagne}
+{
+  \begin{itemize}%
+    \items Implementation of a control architecture based on the dynamic-graph
+           (developed at LAAS-CNRS).
+           The architecture includes real-time software (low level) up to ROS
+           integration.
+    \items Development of locomotion algorithms for humanoid and quadruped
+           robots.
+    \items Integration of the software on the humanoid robot \emph{Athena} and
+           the quadruped robot \emph{Solo}.
+    \items Setup of continuous integration for the core codes of the
+           laboratory's control architecture.
+    \items Open-sourcing of these codes (https://github.com/machines-in-motion/).
+  \end{itemize}
+}
+
 \cventry{2013-2016}{PhD in Robotics}{LAAS-CNRS}{Toulouse}{France}
 {
 \begin{itemize}%
@@ -96,7 +99,7 @@
 \newline{}
 \end{itemize}
 }
-%
+
 \cventry{Mars 2013\\until September 2013}{Training}{CEA Saclay}{Gif-sur-Yvette}{France}
 {
 \begin{itemize}%
@@ -105,8 +108,7 @@
 \newline{}
 \end{itemize}
 }
-%
-%
+
 \cventry{October 2012\\until February 2013}{Student project}{Supm\'eca Toulon}{}{France}
 {
 \begin{itemize}%
@@ -115,9 +117,7 @@
 \newline{}
 \end{itemize}
 }
-%
-%
-%
+
 \cventry{September 2012\\until January 2013}{Training}{University of Birmingham}{}{United-Kingdom}
 {
 \begin{itemize}%
@@ -126,6 +126,32 @@
 \newline{}
 \end{itemize}
 }
+
+\section{Education}
+
+\cventry{2013 -- 2016}{PhD in Robotics}
+{in LAAS-CNRS}
+{Universit\'e Paul-Sabatier, Toulouse III}
+{supervised by Olivier Stasse. \textit{"Advanced human inspired walking strategies for humanoid robots".} Defense the 28$^{th}$ of September 2016}
+{}
+
+\cventry{2010 -- 2013}{2 master degrees}
+{Engineer Diploma (Supm\'eca Toulon) AND \emph{Master in vision and command} (University of Toulon)}
+{France}
+{}
+{Specialty : robotics and mechatronic systems}
+
+
+\cventry{2008 -- 2010}{Preparatory classes to enter the French Engineering Schools + Baccalaur\'eat (A-level)}{in Caen, France}{}{}{Specialty : Mathematics, Physics, Engineer science}%
+
+\cventry{Language}{English}{fluent : read, written, spoken}{TOEIC 865/990 2012}{}{Publications in international journals, training for 6 months in Birmingham UK}
+
+\cventry{}{Other languages}{notion of Chinese and Italian}{}{}{}
+
+\cventry{Informatics}{Software}{cmake, git, OpenCV, Matlab(Simulink), LabView, CATIA(V5R20), Adams}
+{}{}{}
+
+\cventry{}{Language}{C/C++,python,bash, nix}{}{}{}
 
 %\newpage
 
@@ -139,22 +165,21 @@
 \end{itemize}
 }
 
-
 \section{Publications}
 
 \large{\underline{PhD thesis :}}
 
 \begin{itemize}%
-\items \fullcite{phd:mnaveau:2016}
+\items \footnotesize{\fullcite{phd:mnaveau:2016}}
 \end{itemize}
 
 \large{\underline{Journal papers :}}
 
 \begin{itemize}%
-\items \fullcite{mukovskiy:tro:2016}
-\items \fullcite{orthey:homotopic:2015}
-\items \fullcite{naveau:ral:2016}
-\items \fullcite{clever:ral:2017}
+\items \footnotesize{\fullcite{mukovskiy:tro:2016}}
+\items \footnotesize{\fullcite{orthey:homotopic:2015}}
+\items \footnotesize{\fullcite{naveau:ral:2016}}
+\items \footnotesize{\fullcite{clever:ral:2017}}
 \end{itemize}%
 
 %vspace*{0.3cm}
@@ -162,12 +187,12 @@
 \large{\underline{Conference papers :}}
 
 \begin{itemize}%
-\items \fullcite{ramirez:ichr:2016}
-\items \fullcite{matan:biorob:2016}
-\items \fullcite{carpentier:icra:2016}
-\items \fullcite{kudruss:ichr:2015}
-\items \fullcite{naveau:ichr:2014}
-\items \fullcite{stasse:ichr:2014}
+\items \footnotesize{\fullcite{ramirez:ichr:2016}}
+\items \footnotesize{\fullcite{matan:biorob:2016}}
+\items \footnotesize{\fullcite{carpentier:icra:2016}}
+\items \footnotesize{\fullcite{kudruss:ichr:2015}}
+\items \footnotesize{\fullcite{naveau:ichr:2014}}
+\items \footnotesize{\fullcite{stasse:ichr:2014}}
 \end{itemize}
 
 %vspace*{0.3cm}
