--- a/src/cv_english.tex
+++ b/src/cv_english.tex
@@ -41,7 +41,7 @@
 
 \address{Toulouse}{}
 \extrainfo{Driving license -- French citizen}
-\photo[4cm]{../figures/photo_officiel_small.JPG}
+\photo[3cm]{../figures/photo_officiel_trunc.jpg}
 
 \renewcommand*{\firstnamefont}{\fontsize{30pt}{20}\mdseries\upshape}
 \renewcommand*{\familynamefont}{\fontsize{30pt}{20}\mdseries\upshape}
